objects/ASI_MFM_Brand_Allocation__c.object
<CustomObject>
    <fields>
        <fullName>ASI_MFM_Mapping_Brand__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Mapping Brand</label>
        <referenceTo>ASI_MFM_Sub_brand__c</referenceTo>
        <relationshipName>ASI_MFM_Sub_brand_Mappings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Mapping_Sub_brand__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Mapping Sub-brand</label>
        <referenceTo>ASI_MFM_Sub_brand__c</referenceTo>
        <relationshipName>ASI_MFM_Sub_brand_Mappings1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Percentage__c</fullName>
        <label>Percentage</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <label>ASI MFM Brand Allocation</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>ASI_MFM_Mapping_Brand__c</columns>
        <columns>ASI_MFM_Mapping_Sub_brand__c</columns>
        <columns>ASI_MFM_Percentage__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_GB</language>
    </listViews>
    <nameField>
        <displayFormat>BA-{00000}</displayFormat>
        <label>Brand Sub-brand Allocation Ref Num</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>ASI MFM Brand Allocations</pluralLabel>
    <recordTypes>
        <fullName>ASI_MFM_Gulf_Brand_Allocation</fullName>
        <active>true</active>
        <label>ASI MFM Gulf Brand Allocation</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>